; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_imap.c_imap_perform_logout.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_imap.c_imap_perform_logout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.connectdata = type { i32 }

@.str = private unnamed_addr constant [7 x i8] c"LOGOUT\00", align 1
@IMAP_LOGOUT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.connectdata*)* @imap_perform_logout to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @imap_perform_logout(%struct.connectdata* %0) #0 {
  %2 = alloca %struct.connectdata*, align 8
  %3 = alloca i32, align 4
  store %struct.connectdata* %0, %struct.connectdata** %2, align 8
  %4 = load %struct.connectdata*, %struct.connectdata** %2, align 8
  %5 = call i32 @imap_sendf(%struct.connectdata* %4, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  store i32 %5, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %12, label %8

8:                                                ; preds = %1
  %9 = load %struct.connectdata*, %struct.connectdata** %2, align 8
  %10 = load i32, i32* @IMAP_LOGOUT, align 4
  %11 = call i32 @state(%struct.connectdata* %9, i32 %10)
  br label %12

12:                                               ; preds = %8, %1
  %13 = load i32, i32* %3, align 4
  ret i32 %13
}

declare dso_local i32 @imap_sendf(%struct.connectdata*, i8*) #1

declare dso_local i32 @state(%struct.connectdata*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
